fixed alignment with trash button

--- a/src/Note.css
+++ b/src/Note.css
@@ -2,10 +2,10 @@
     padding-top: 0rem;
     padding-left: 23rem;
     /*margin-left: -2rem;*/
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-line-pack: center;
     align-content: left;
+    width: 0%;
+    height: 0%;
   }
 .Note button {
     border: none;
@@ -15,21 +15,17 @@
     font-size: 25px;
   }
 .Note button[type=submit] {
-    background-color: #FECB9D;
+    background-color: #008bf8;
     /* background-color: #FECB9D; */
     border-radius: 4px;
     color: #fff;
     font-size: 1.4rem;
     padding: 1rem;
   }
-.Note button {
+.Note .button {
     color: #999;
     font-size: 2rem;
     margin: 0;
     align-content: right;
     align-items: flex-end; 
   }
-
-.Note button:hover {
-  color: black
-}
